--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "infobip-community/infobip-api-php-sdk": "^1.1",
         "infobip/infobip-api-php-client": "5.0.0",
         "intervention/image": "^2.7",
+        "jenssegers/agent": "^2.6",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/socialite": "^5.15",
@@ -31,6 +32,7 @@
         "matthiasmullie/minify": "^1.3",
         "midtrans/midtrans-php": "^2.5",
         "mollie/laravel-mollie": "^2.14",
+        "phonepe/phonepe-pg-php-sdk": "^1.0",
         "plivo/plivo-php": "^4.52",
         "pragmarx/google2fa": "^8.0",
         "predis/predis": "^2.2",
@@ -101,6 +103,26 @@
             "php-http/discovery": true
         }
     },
+    "repositories": [
+        {
+            "type": "package",
+            "package": [
+                {
+                    "dist": {
+                        "type": "zip",
+                        "url": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-pg-php-sdk/phonepe-pg-php-sdk.zip"
+                    },
+                    "name": "phonepe/phonepe-pg-php-sdk",
+                    "version": "1.0.0",
+                    "autoload": {
+                        "classmap": [
+                            "/"
+                        ]
+                    }
+                }
+            ]
+        }
+    ],
     "minimum-stability": "stable",
     "prefer-stable": true
 }
