--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "livewire/livewire": "^3.5",
+        "maatwebsite/excel": "^3.1",
         "mailersend/laravel-driver": "^2.2",
         "matthiasmullie/minify": "^1.3",
         "midtrans/midtrans-php": "^2.5",
